--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
     <div align="center" class="">
         <h1>Group 2</h1>
         <textarea class="textarea-like" ng-hide="done" ng-model="message" cols="50" rows="10" maxlength="200"></textarea>
-        
+
         <div class="textarea-like" ng-show="done" ng-mouseleave="leave()" ng-mouseover="hover($index, data.matches.length > 0)" ng-repeat="data in result" ng-class="{found: data.matches.length > 0, selected: $index==selectedIndex}">
             {{data.line}}
         </div>
-
-
         <br>
+        <a class="mini-button" ng-hide="done" ng-click="addExample()">Add examples</a>
+        <br>
+
+
         <input ng-hide="done" class="button" type="button" name="name" value="Search" ng-click="search()" />
+
+
         <div ng-show="loading" ><img id = "loading"src="./images/loading.gif" alt=""></div>
 
         <div id="loading-img"></div>
@@ -33,7 +37,7 @@
                 </div>
             </div>
 
-            <a class="mini-button" ng-click="showAll = !showAll" ng-hide="showAll">Show more</a>
+            <a class="mini-button" ng-show="data.matches.length > 1" ng-click="showAll = !showAll" ng-hide="showAll">Show more</a>
 
             <div class="box" <div ng-show="showAll" ng-repeat="child in data.matches | startFrom:1">
                 {{child.file_name}}
@@ -45,10 +49,10 @@
             <a class="mini-button" ng-click="showAll = !showAll" ng-show="showAll">Hide</a>
 
         </div>
+        <input ng-show="done" class="button red" type="button" name="name" value="Try Again" ng-click="tryAgain()" />
     </div>
 
 
-    
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <script src="./controller.js"></script>
 </body>
